<resources>
    <string name="app_name">Lorem Generator</string>
    <string name="title_text">Lorem Generator</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="creator_fill">Your Name Here</string>
    <string name="confirm_button_text">Confirm</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum facilisis lacus id varius. Aenean lacinia tempor neque, id vulputate sem blandit ut. Suspendisse imperdiet lorem ante, sed finibus justo aliquam vel. Etiam iaculis orci enim, vel finibus justo consequat vitae. Maecenas tincidunt, felis sed feugiat accumsan, velit augue dictum orci, non venenatis turpis lorem id tortor. In elit sapien, ultricies vel cursus id, rutrum ut massa. Vestibulum congue consequat nunc, a bibendum justo malesuada a. Aenean eu ipsum sed sapien feugiat mattis ac ac neque. Nunc diam erat, varius vel nibh quis, tempor scelerisque enim. Ut faucibus sed urna eget vestibulum. Phasellus semper sed libero non cursus. Nam aliquam metus sed ipsum pellentesque, non lobortis risus aliquet. Sed at molestie elit.
        Donec faucibus mauris facilisis velit euismod hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus consectetur eget nisi nec suscipit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec tincidunt, ligula vulputate ullamcorper cursus, est turpis tristique ex, non feugiat ipsum lorem quis augue. Nam ut faucibus risus. Pellentesque eget dictum lacus, vel cursus sapien.
        Maecenas nec malesuada risus, a tincidunt dolor. Pellentesque vel tincidunt tellus. Mauris eu aliquam ligula. Nam sit amet justo eget neque tincidunt pellentesque. Nulla id accumsan tortor. Phasellus erat enim, convallis et leo et, pretium dapibus est. Fusce eget ipsum rutrum, finibus diam eget, cursus ante. Sed a metus auctor, rutrum lectus vitae, ullamcorper ex. Nullam sit amet tempor tortor, sed vestibulum mi. Cras efficitur ex quis vehicula aliquet. Sed pretium nisl lectus, nec posuere lacus iaculis at. Quisque ut orci eu leo eleifend pellentesque vel ut magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed eu vestibulum tortor. Vestibulum mollis id diam sit amet feugiat.
        Nullam luctus purus id iaculis iaculis. Cras sed egestas lacus, eget pulvinar odio. Fusce non malesuada mi. Quisque pharetra commodo elit in vestibulum. Mauris at felis a enim venenatis mattis non eu arcu. Suspendisse potenti. Nulla ac nibh vitae quam placerat tempor vitae quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas hendrerit lorem a purus malesuada hendrerit. Nam fringilla purus ac finibus interdum. Nulla quis massa in eros luctus ultrices quis eget lacus. Etiam quis arcu non odio condimentum pharetra. Ut in ultrices felis, nec accumsan arcu. Donec ante lorem, tempor eu elementum id, pellentesque vel arcu. Vestibulum id nisi sed libero suscipit venenatis. Curabitur mi lorem, rhoncus nec rutrum eu, gravida ac erat.
        Maecenas luctus facilisis mauris, nec aliquam eros aliquet id. Proin quis tortor ac purus faucibus ullamcorper. Nam vel urna a nibh consectetur mollis. Morbi hendrerit purus sit amet massa volutpat condimentum. In vitae lorem metus. Vivamus condimentum ex viverra orci rutrum faucibus. Praesent ornare lobortis nunc, imperdiet mattis arcu bibendum vel.
    </string>

    <string-array name="lorem_types">
        <item>Lorem Ipsum</item>
        <item>Office Ipsum</item>
        <item>Hip Ipsum</item>
        <item>Legal Ipsum</item>
    </string-array>

</resources>
