<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name='loremIpsum'
            type="com.github.winstonrenatan.loremgenerator.Ipsum"/>
        <variable
            name='officeIpsum'
            type="com.github.winstonrenatan.loremgenerator.Ipsum"/>
        <variable
            name='hipIpsum'
            type="com.github.winstonrenatan.loremgenerator.Ipsum"/>
        <variable
            name='legalIpsum'
            type="com.github.winstonrenatan.loremgenerator.Ipsum"/>
    </data>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <TextView
            android:id="@+id/title_text"
            android:textColor="#E71A07"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/title_text"
            tools:text="@string/title_text" />

        <EditText
            android:id="@+id/creator_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/creator_fill"
            tools:text="@string/creator_fill" />

        <Spinner
            android:id="@+id/lorem_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin" />

        <Button
            android:id="@+id/creator_button"
            android:textColor="#2a97db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/confirm_button_text"
            tools:text="@string/confirm_button_text" />

        <TextView
            android:id="@+id/creator_text"
            android:textColor="#1ca69d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/text_style"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin">

            <TextView
                android:id="@+id/lorem_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/lorem_ipsum"
                android:textAlignment="center" />
        </ScrollView>
    </LinearLayout>

</layout>